# wanaplay-booker

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.api  build.sh
src/: lib.rs  main.rs
wanabot/: Dockerfile  bot.py  config.py.dist  invite.squash.ics.template  requirements.txt
