[package]
name = "wanaplay-booker"
version = "0.1.0"
authors = ["Nicolas Berard <berard.nicolas@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
env_logger = "0.5"
rust-crypto = "0.2.36"
structopt = "0.2"
chrono = "0.4.0"
select = "0.4.2"
failure = "0.1.5"
rocket = "0.4.0-rc.1"
serde_yaml = "0.8.8"
serde = "1.0.0"
serde_derive = "1.0"
serde_json = "1.0"